Added slowmode command, commented some unimplemented changes